clusters/default/apps/hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
spec:
  type: ClusterIP
  selector:
    app: hermes
  ports:
    - name: http
      port: 9119
      targetPort: 9119
